--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ kotlin = "1.9.0"
 core-ktx = "1.9.0"
 lifecycle = "2.6.2"
 material = "1.9.0"
+compose-material = "1.5.4"
 mockito = "2.25.0"
 mockito-all = "1.10.19"
 mockito-android = "2.25.0"
@@ -42,7 +43,7 @@ vectordrawable = "1.1.0"
 hilt = "2.48"
 mockk = "1.9.3"
 fb_shimmer = "0.5.0"
-androidx-compose-bom = "2023.09.02"
+androidx-compose-bom = "2023.10.01"
 compose-compiler = "1.4.0"
 androidx-lifecycle-compose = "2.6.2"
 androidx-lifecycle-runtime-compose = "2.6.2"
@@ -100,6 +101,7 @@ androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = 
 androidx-compose-foundation = { module = "androidx.compose.foundation:foundation" }
 androidx-compose-foundation-layout = { module = "androidx.compose.foundation:foundation-layout" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3" }
+androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "compose-material" }
 androidx-compose-runtime = { module = "androidx.compose.runtime:runtime" }
 androidx-compose-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata" }
 androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
